<resources>
    <string name="app_name">Carmemo</string>
    <string name="title_activity_nav_drawer">Carmemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_acc">Need a New Account?</string>
    <string name="already_registed">Already Registered? Click Here</string>
    <string name="name_regis">Name</string>
    <string name="regis_button">Register</string>
    <string name="auth0_client_id">28BCzzh69tSn8aWrbZvZmJSgExSUrH4W</string>
    <string name="auth0_domain">ispam.auth0.com</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="logout">Logout</string>
    <string name="need_email">We need an Email</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>
