<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.destinum.carmemo.activities.Registration"
    android:background="#42afb7">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/image_logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:textAlignment="center"
        android:ems="10"
        android:layout_below="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/etEmail"
        android:background="@drawable/form_input"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:ems="10"
        android:id="@+id/etName"
        android:hint="@string/name_regis"
        android:layout_below="@id/image_logo"
        android:background="@drawable/form_input"
        android:layout_marginTop="15dp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_below="@id/etEmail"
        android:background="@drawable/form_input"
        android:layout_marginTop="15dp"
        android:textAlignment="center"/>

    <Button
        android:text="@string/regis_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_button"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_regis"
        android:translationZ="8dp"
        android:elevation="4dp"
        android:stateListAnimator="@null"/>


    <TextView
        android:text="@string/already_registed"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/tvAlreadyReg"
        android:clickable="true"/>



</RelativeLayout>
