<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.destinum.carmemo.activities.Login"
    android:background="#42afb7">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/imageView2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:textAlignment="center"
        android:ems="10"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/etEmail"
        android:background="@drawable/form_input"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_below="@id/etEmail"
        android:background="@drawable/form_input"
        android:layout_marginTop="15dp"
        android:textAlignment="center"/>

    <Button
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_button"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_log_in"
        android:translationZ="8dp"
        android:elevation="4dp"
        android:stateListAnimator="@null"/>

    <TextView
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:id="@+id/tvOR"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_toRightOf="@id/tvOR"
        android:background="@android:color/black"
        android:layout_alignBottom="@+id/tvOR"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/tvOR"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_alignBottom="@+id/tvOR"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:layout_toLeftOf="@+id/tvOR"
        android:layout_toStartOf="@+id/tvOR"/>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:layout_below="@id/tvOR"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/facebook"
        android:layout_marginRight="30dp"
        android:id="@+id/twitter"/>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:layout_below="@id/tvOR"
        android:layout_marginTop="15dp"
        android:id="@+id/facebook"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:layout_below="@id/tvOR"
        android:layout_marginTop="15dp"
        android:id="@+id/gmail"
        android:layout_toRightOf="@id/facebook"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:text="@string/new_acc"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/tvNewAcc"
        android:clickable="true"/>

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/tvForgotPass"/>
</RelativeLayout>
